Fixed some spacing issues on Captions
fixed spacing issues with portfolio captions using jQuery.  Now all
captions are perfectly centered

--- a/assets/compass/sass/style.scss
+++ b/assets/compass/sass/style.scss
@@ -299,32 +299,33 @@ h3{
                    -ms-transition: all .5s ease-in-out;
                      -o-transition: all .5s ease-in-out;
                          transition: all .5s ease-in-out;
-                .title{
+                .caption-content{
                     position: absolute;
-                    top: 25%;
-                    text-align: center;
+                    top: 0px;
                     width: 100%;
-                }
-                .horizontal-rule{
-                    width: 100%;
-                    position: absolute;
-                    top: 43%;
-                    .line{
-                        width: 80%;
-                        margin-left:10%;
-                        margin-top: 0px;
-                        margin-bottom: 0px;
+                    .title{            
+                        text-align: center;
+                        width: 100%;
                     }
-                }
-                .description{
-                    position: absolute;
-                    top: 53%;
-                    text-align: center;
-                    width: 100%;
-                    .text-space{
-                        width: 80%;
-                        margin-left: 10%;
-                        letter-spacing: 2px;
+                    .horizontal-rule{
+                        width: 100%;
+                        .line2{
+                            width: 80%;
+                            margin-left:10%;
+                            margin-top: 15px;
+                            margin-bottom: 15px;
+                            height: 2px;
+                            background: orange;
+                        }
+                    }
+                    .description{
+                        text-align: center;
+                        width: 100%;
+                        .text-space{
+                            width: 80%;
+                            margin-left: 10%;
+                            letter-spacing: 2px;
+                        }
                     }
                 }
 
@@ -710,16 +711,11 @@ h3{
 }
 
 @media screen and (max-width: 575px) {
-    #portfolio-wrapper #pictures .portfolio .caption {
+    #portfolio-wrapper #pictures .portfolio .caption .caption-content {
         .title{
-            top: 5%;
             font-size: 24px;
         }
-        .horizontal-rule{
-            top: 25%;
-        }
         .description{
-            top: 33%;
             font-size: 10px;
         }
     }
